mux-compiler/tests/snapshots/executable_integration__executable_integration__error_auto_nested_empty.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Cannot infer type for expression containing empty set/map literal
--> test_scripts/error_cases/error_auto_nested_empty.mux:3:14
   |
 3 |     auto y = {1: {}}
   |              ^
   |
= help: Use explicit type annotations for all empty collection literals.
