mux-compiler/tests/snapshots/executable_integration__executable_integration__forward_ref.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: full_output
---
STDOUT:
true
true
false
false

STDERR:
mux_bool_to_string called with b: true
mux_bool_to_string called with b: true
mux_bool_to_string called with b: false
mux_bool_to_string called with b: false
