mux-compiler/tests/snapshots/executable_integration__executable_integration__full_test.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: full_output
---
explicit: 10
inferred: 42
floatVal: 9.4
Big number
maybeNum created
Large value: 15
nums: [1, 2, 3]
c1.radius set to: 2
c2.radius set to: 3.5
cirs created with 2 circles
Circle radius=2
Circle radius=3.5
stack created
pushed 99 to stack
popped from stack: 99
divide(10, 2) result:
5
got a good val
findEven([1, 3, 4, 7]):
4
square function created
doubled: [2, 4, 6]
squared: [1, 4, 9]
val: 10
pointer p created
val after deref assignment: 20
full_test passes
