mux-compiler/tests/snapshots/executable_integration__executable_integration__functions.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: full_output
---
add(3,4): 7
Hello World
Hello World
square(5): 25
doubled(3.5): 7
