mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_classes.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: full_output
---
Box with: 42
Box with: hello
Generic class test completed
