mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_params.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: full_output
---
42
hello
status successful
true
42
3.1
1
two
3.0
100
200
300
All tests passed!
