mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_static_import_context_main.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
after static call
set complete
value: 42
