mux-compiler/tests/snapshots/executable_integration__executable_integration__global_scope.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: full_output
---
=== Testing Global Variable Access ===
✓ Test 1: Functions can read global variables

=== Testing Global Variable Modification ===
✓ Test 2: Functions can modify global variables (counter = 1)
✓ Test 2b: Multiple calls accumulate changes (counter = 3)

=== Testing Local Variable Shadowing ===
✓ Test 3a: Local variable shadows global (got 100)
✓ Test 3b: Global remains unchanged after shadowing (still 42)

=== Testing Multiple Functions Sharing Globals ===
✓ Test 4: Multiple functions share globals correctly (10+5+10 = 25)

=== Testing Nested Scopes Within Functions ===
✓ Test 5: Globals accessible in nested scopes (2 from if, 3 from while = 5)

=== Testing Global Boolean Operations ===
✓ Test 6a: Initial global_flag is true
✓ Test 6b: toggle_flag() works (now false)
✓ Test 6c: toggle_flag() works again (now true)

=== Testing Complex Global Updates ===
✓ Test 7: Complex math operations on globals (10*2+5-3 = 22)

=== All Global Scope Tests Completed ===
